 Open Freelance Accounting - NEWS

 Summary
 =======
 
   Version 0.46
   Version 0.45
   Version 0.44
   Version 0.43
   Version 0.42
   Version 0.41
   Version 0.40
   Version 0.39
   Version 0.38
   Version 0.37
   Version 0.36
   Version 0.35

-----------------------------------------------------------------------
 Version 0.46
 ============

 Released on 

 New features and improvements:

   - LedgerSummaryRender: have a summary per ledger (todo #729).

 Bug fixes:

   - 

 Other changes:

   - 

-----------------------------------------------------------------------
 Version 0.45
 ============

 Released on 2016- 1-24.

 New features and improvements:

   - ofaBatTreeview: add unused count to page (todo #754).
   - ofaHub: new hub management class (todo #948).
   - ofaICollectionable, ofaICollector: new interfaces.
   - ofaIExeCloseClose: new interface for exercice closing in the plugins.
   - ofaIHubber: new interface for ofaHub management (todo #941).
   - TVA: compute the VAT rules (todo #311).
   - ExerciceClosing: let the plugins do their tasks (todo #965).

 Bug fixes:

   - 

 Other changes:

   - core/ofo-marshal.def: remove obsoleted file (todo #962).
   - ofa_idbmodel_get_by_name(): new method.
   - ofaAccountSelectorBin: removed unused class.
   - ofaCollection: removed class.
   - ofaConcilCollection: removed class.
   - ofaIDataset: removed obsolete interface (todo #957).
   - ofa_dossier_misc_import_csv(): removed function.
   - ofa_ledger_treeview_get_top_focusable_widget(): removed method.
   - ofa_main_window_get_dossier: obsoleted method (todo #961).
   - ofa_main_window_open_dossier: obsoleted method (todo #961).
   - ofa_main_window_get_hub(): new method.
   - ofa_main_window_update_title(): removed method.
   - ofa_page_get_dossier(): obsoleted method (todo #955).
   - ofo_base_get_hub(), ofo_base_set_hub(): new methods.
   - ofo_dossier_new(): removed method.
   - ofo_dossier_get_min_deffect(): changed API (todo #960).